[gd_scene load_steps=5 format=3 uid="uid://djw7wm5dqckr2"]

[ext_resource type="Script" uid="uid://dp3tm4hugqne7" path="res://scripts/assets/board/ready_go_scene.gd" id="1_3a8wb"]

[sub_resource type="Animation" id="Animation_3a8wb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/CenterContainer/Go:theme_override_font_sizes/font_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [116]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer/CenterContainer/Go:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer/Ready:visible_characters")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_jrey4"]
resource_name = "ReadyGoAnim"
length = 2.0
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/CenterContainer/Go:theme_override_font_sizes/font_size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1, 1, 116]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer/CenterContainer/Go:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.9999, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, false, true, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer/Ready:visible_characters")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [5, 8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1ll51"]
_data = {
&"RESET": SubResource("Animation_3a8wb"),
&"ReadyGoAnim": SubResource("Animation_jrey4")
}

[node name="ReadyGo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3a8wb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(220, 0)
layout_mode = 0
offset_right = 220.0
offset_bottom = 249.0

[node name="ReadyProgress" type="ProgressBar" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
theme_override_font_sizes/font_size = 13
max_value = 1.0
step = 0.001
show_percentage = false

[node name="Ready" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 58
text = "Ready..."
visible_characters = 8

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="Go" type="Label" parent="VBoxContainer/CenterContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 116
text = "GO!"
vertical_alignment = 1

[node name="ReadyGoTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_1ll51")
}

[connection signal="timeout" from="ReadyGoTimer" to="." method="_on_ready_go_timer_timeout"]
